syntax = "proto3";

package pb;

import "google/api/annotations.proto";
option go_package = "grpc_anotation_sample/pb";

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  int32 pages = 4;
}

message CreateBookRequest { Book data = 1; }
message CreateBookResponse { Book data = 1; }
message GetBookRequest { string id = 1; }
message GetBookResponse { Book data = 1; }
message UpdateBookRequest { Book data = 1; }
message UpdateBookResponse { Book data = 1; }
message DeleteBookRequest { string id = 1; }
message DeleteBookResponse { bool success = 1; }
message ListBooksRequest {}
message ListBooksResponse { repeated Book data = 1; }

service BookService {
  rpc CreateBook(CreateBookRequest) returns (CreateBookResponse) {
    option (google.api.http) = { post: "/v1/books" body: "*" };
  }
  rpc GetBook(GetBookRequest) returns (GetBookResponse) {
    option (google.api.http) = { get: "/v1/books/{id}" };
  }
  rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse) {
    option (google.api.http) = { put: "/v1/books/{data.id}" body: "*" };
  }
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse) {
    option (google.api.http) = { delete: "/v1/books/{id}" };
  }
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse) {
    option (google.api.http) = { get: "/v1/books" };
  }
}

